docs/index.css
body {
  background: #e8e9e8;
  font-family: "Arial";
  background-color: dodgerblue;
}

/*Colors*/
.blue{
	background-color:dodgerblue;
}
.tomato{
	background-color:tomato;
}
.blueBorder{
	border: 4px solid dodgerblue;
}
.tomatoBorder{
	border: 4px solid tomato;
}

/*sizes*/
.large{
  width:10vw;
  height:10vw;
  border-radius: 6vw;
}
.small{
	width:6vw;
	height:6vw;
	border-radius: 4vw;
}

/*drop shadow*/
.shadow{
	-webkit-box-shadow: 3px 2px 5px 0px rgba(187,187,187,1);
	-moz-box-shadow: 3px 2px 5px 0px rgba(187,187,187,1);
	box-shadow: 3px 2px 5px 0px rgba(187,187,187,1);
}
.container{
	margin:20px;
	background-color:whitesmoke;
	color:#eee;
	height:calc( 100% - 40px );
	border-radius:10px;
}
.quarter{
	height:50%;
	width:50%;
	
	float:left;
	box-sizing:border-box;
	color:#ccc;
}
/*.quarter:nth-child(1){
	border-bottom: 1px solid #ccc;
}*/
.quarter:nth-child(2){
	border-left: 1px solid #ccc;
}
.quarter:nth-child(3){
	border-top: 1px solid #ccc;
}
.quarter:nth-child(4){
	border-left: 1px solid #ccc;
	border-top: 1px solid #ccc;
}
.label{
	margin-top:20vh;
	text-align: center;
	font-size:2em;
}

.dragger{
  position:absolute;
  top:50%;
  left:50%;
  cursor: pointer;
}
.expander{
  z-index:1;
  position:absolute;
}
.pulse{
	animation: bounceIn 0.5s;
}
@keyframes bounceIn {
  0% {
    transform: scale(1);
    opacity: 1;
  }
  100% {
    transform: scale(5);
    opacity: 0;
  }
}
.handle{
	z-index:10;	
  border:4px solid #fff; 
  position:absolute;
}
.other{
	position:absolute;
	display:none;
}

